# iTransfer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  config.example.yaml  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json
.gitea/workflows/: build-harbor.yml
backend/: package-lock.json  package.json
backend/prisma/: .env  schema.prisma
backend/prisma/seed/: config.seed.ts  run-seed.js
backend/src/: app.module.ts  constants.ts  main.ts
backend/src/apiToken/: apiToken.dto.ts  apiToken.module.ts  apiToken.service.ts
backend/src/auth/: auth.controller.ts  auth.service.ts  authTotp.service.ts
backend/src/clamscan/: clamscan.module.ts  clamscan.service.ts
backend/src/config/: config-defaults.ts  config.controller.ts  config.module.ts  config.service.ts  storageMigration.service.ts  (+1 more)
backend/test/: newman-system-tests.json
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: introduction.md
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/scripts/: check-i18n-sync.mjs
scripts/: backup-mediapult.sh  migrate-database-name.sh  restore-mediapult.sh
scripts/docker/: create-user.sh  entrypoint.sh
(+119 files in other folders)
