[package]
name = "mediapult-transfer-desktop"
version = "0.1.0"
description = "Mediapult Transfer desktop tray uploader"
authors = ["Mediapult"]
edition = "2021"

[lib]
name = "mediapult_transfer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
